<resources>
    <string name="app_name">SwipeAssignment</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_product_name">Enter Product Name</string>
    <string name="enter_product_type">Enter Product Type</string>
    <string name="enter_product_price">Enter Product Price</string>
    <string name="enter_applicable_tax">Enter Applicable Tax</string>
    <string name="select_product_image">Select Product Image:</string>
    <string name="add_product">Add Product</string>
    <string name="no_image_selected">No Image Selected</string>
    <string name="search_product">Search Product</string>

    <array name="product_types">
        <item>Select Product Type</item>
        <item>Mobile</item>
        <item>Computer</item>
        <item>Accessories</item>
    </array>
</resources>